--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link rel="shortcut icon" type="image/ico" href="favicon.ico">
     <title>SOFÍA'S</title>
 </head>
 <body>
     <header>
         <section class="contenedor-header">
-            <div>
-                <p>SOFÍA'S</p>
+            <div id="contenedor-icono-nombre">
+                <p><i class="fa fa-paw" id="icono-header" aria-hidden="true"></i> SOFÍA'S</p>
             </div>
 
             <div>
@@ -133,7 +134,7 @@
                           </div>
                           <div class="product-body">
                             <h3 class="product-name">Celular Iphone</h3>
-                            <p class="product-price">$ 22499</p>
+                            <p class="product-price">$22.49</p>
                             <div class="rating">
                               <i class="fas fa-star"></i>
                               <i class="fas fa-star"></i>
@@ -157,7 +158,7 @@
                           </div>
                           <div class="product-body">
                             <h3 class="product-name">Celular rosa</h3>
-                            <p class="product-price">$ 22499</p>
+                            <p class="product-price">$50.70</p>
                             <div class="rating">
                               <i class="fas fa-star"></i>
                               <i class="fas fa-star"></i>
@@ -181,7 +182,7 @@
                           </div>
                           <div class="product-body">
                             <h3 class="product-name">Celular rojo</h3>
-                            <p class="product-price">$ 22499</p>
+                            <p class="product-price">$26.39</p>
                             <div class="rating">
                               <i class="fas fa-star"></i>
                               <i class="fas fa-star"></i>
@@ -205,7 +206,7 @@
                           </div>
                           <div class="product-body">
                             <h3 class="product-name">Celular azul</h3>
-                            <p class="product-price">$ 22499</p>
+                            <p class="product-price">$20.99</p>
                             <div class="rating">
                               <i class="fas fa-star"></i>
                               <i class="fas fa-star"></i>
@@ -229,7 +230,7 @@
                           </div>
                           <div class="product-body">
                             <h3 class="product-name">Celular amarillo</h3>
-                            <p class="product-price">$ 22499</p>
+                            <p class="product-price">$49.99</p>
                             <div class="rating">
                               <i class="fas fa-star"></i>
                               <i class="fas fa-star"></i>
@@ -253,7 +254,7 @@
                           </div>
                           <div class="product-body">
                             <h3 class="product-name">Celular celeste</h3>
-                            <p class="product-price">$ 22499</p>
+                            <p class="product-price">$40.30</p>
                             <div class="rating">
                               <i class="fas fa-star"></i>
                               <i class="far fa-star"></i>
@@ -277,7 +278,7 @@
                           </div>
                           <div class="product-body">
                             <h3 class="product-name">Celular negro</h3>
-                            <p class="product-price">$ 22499</p>
+                            <p class="product-price">$19.99</p>
                             <div class="rating">
                               <i class="fas fa-star"></i>
                               <i class="fas fa-star"></i>
@@ -301,7 +302,7 @@
                           </div>
                           <div class="product-body">
                             <h3 class="product-name">Celular blanco</h3>
-                            <p class="product-price">$ 22499</p>
+                            <p class="product-price">$32.50</p>
                             <div class="rating">
                               <i class="fas fa-star"></i>
                               <i class="fas fa-star"></i>
@@ -325,7 +326,7 @@
                           </div>
                           <div class="product-body">
                             <h3 class="product-name">Celular android</h3>
-                            <p class="product-price">$ 22499</p>
+                            <p class="product-price">$30.25</p>
                             <div class="rating">
                               <i class="fas fa-star"></i>
                               <i class="fas fa-star"></i>
@@ -349,7 +350,7 @@
                           </div>
                           <div class="product-body">
                             <h3 class="product-name">Celular samsung</h3>
-                            <p class="product-price">$ 22499</p>
+                            <p class="product-price">$15.99</p>
                             <div class="rating">
                               <i class="fas fa-star"></i>
                               <i class="fas fa-star"></i>
@@ -373,7 +374,7 @@
                           </div>
                           <div class="product-body">
                             <h3 class="product-name">Celular xiaomi</h3>
-                            <p class="product-price">$ 22499</p>
+                            <p class="product-price">$42.30</p>
                             <div class="rating">
                               <i class="fas fa-star"></i>
                               <i class="fas fa-star"></i>
@@ -397,7 +398,7 @@
                           </div>
                           <div class="product-body">
                             <h3 class="product-name">Celular moto</h3>
-                            <p class="product-price">$ 22499</p>
+                            <p class="product-price">$35.99</p>
                             <div class="rating">
                               <i class="fas fa-star"></i>
                               <i class="fas fa-star"></i>
@@ -416,9 +417,26 @@
     
 
     <footer>
-            <p>SOFÍA'S - Thank you for your visit!</p>
+      <div class="contenedor-footer">
+        <p class="última-frase-footer"><i class="fa fa-paw" aria-hidden="true"></i> SOFÍA'S - Thank you for your visit!</p>
+        <div class="contenedor-redes-footer">
+          <ul class="links-redes">
+            <li class="ícono-redes">
+              <a href="https://github.com/sofialiendro" target="_blank" class="footer-social-link github-link">
+                <i class="fab fa-github"></i></a>
+            </li>
+            <li class="ícono-redes">
+              <a href="https://www.linkedin.com/in/sofialiendro/" target="_blank" class="footer-social-link linkedin-link">
+                <i class="fab fa-linkedin"></i></a>
+            </li>
+            <li class="ícono-redes">
+              <a href="mailto:sofialiendro.s@gmail.com" target="_blank" class="footer-social-link email-link">
+                <i class="fas fa-envelope fab"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>  
     </footer>
-    
 
   <script src="index.js"></script>  
 </body>
