--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
     <header>
         <section class="contenedor-header">
-            <div id="contenedor-icono-nombre">
-                <p><i class="fa fa-paw" id="icono-header" aria-hidden="true"></i> SOFÍA'S</p>
+            <div id="contenedor-icono-header">
+                <h1><i class="fa fa-paw" id="icono-header" aria-hidden="true"></i> SOFÍA'S</h1>
             </div>
 
-            <div>
+            <div id="contenedor-boton-header">
                 <button>Cart (0 items)</button>
             </div>
         </section>
@@ -24,7 +24,7 @@
 
     <section class="contenedor-imagen-principal">
         <div>
-            <p>ACCESORIES</p>
+            <h1 class="texto-imagen-principal">ACCESORIES</h1>
         </div>
     </section>
 
@@ -48,16 +48,16 @@
                     <div class="contenedor-botones-aside-3 formulario">
                         <h3>CATEGORY</h3>
                             <label for="categorias">
-                                <input type="checkbox" name="categoria" class="categorias" value="console">CATS
+                                <input type="checkbox" name="categoria" class="categorias" value="cats">CATS
                             </label>
                             <label for="categorias">
-                                <input type="checkbox" name="categoria" class="categorias" value="notebook">DOGS
+                                <input type="checkbox" name="categoria" class="categorias" value="dogs">DOGS
                             </label>
                             <label for="categorias">
-                                <input type="checkbox" name="categoria" class="categorias" value="cameras">HAMSTERS
+                                <input type="checkbox" name="categoria" class="categorias" value="hamsters">HAMSTERS
                             </label>
                             <label for="categorias">
-                                <input type="checkbox" name="categoria" class="categorias" value="cellphone">BUNNIES
+                                <input type="checkbox" name="categoria" class="categorias" value="bunnies">BUNNIES
                             </label>
                     </div>
                     
@@ -69,7 +69,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i> [5]
+                                <i class="fas fa-star"></i> (5)
                             </label>
                             <label for="categorias">
                                 <input type="checkbox" name="puntaje" value="4" class="rating" value="4">
@@ -77,7 +77,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <i class="far fa-star"></i> [4]
+                                <i class="far fa-star"></i> (4)
                             </label>
                             <label for="categorias">
                                 <input type="checkbox" name="puntaje" value="3" class="rating" value="3">
@@ -85,7 +85,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="far fa-star"></i>
-                                <i class="far fa-star"></i> [3]
+                                <i class="far fa-star"></i> (3)
                             </label>
                             <label for="categorias">
                                 <input type="checkbox" name="puntaje" value="2" class="rating" value="2">
@@ -93,7 +93,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="far fa-star"></i>
                                 <i class="far fa-star"></i>
-                                <i class="far fa-star"></i> [2]
+                                <i class="far fa-star"></i> (2)
                             </label>
                             <label for="categorias">
                                 <input type="checkbox" name="puntaje" value="1" class="rating" value="1">
@@ -101,7 +101,7 @@
                                 <i class="far fa-star"></i>
                                 <i class="far fa-star"></i>
                                 <i class="far fa-star"></i>
-                                <i class="far fa-star"></i> [1]
+                                <i class="far fa-star"></i> (1)
                             </label>
                     </div>
                 </form>
@@ -130,10 +130,10 @@
                         data-puntaje="3"
                         >
                           <div class="product-img-container">
-                            <img src="http://www.placekitten.com/600" class="product-img" />
+                            <img src="img/Products/1575022860_2_2292.jpg" class="product-img" />
                           </div>
                           <div class="product-body">
-                            <h3 class="product-name">Celular Iphone</h3>
+                            <h3 class="product-name">Comfy Bed</h3>
                             <p class="product-price">$22.49</p>
                             <div class="rating">
                               <i class="fas fa-star"></i>
@@ -154,10 +154,10 @@
                         data-puntaje="5"
                         >
                           <div class="product-img-container">
-                            <img src="http://www.placekitten.com/600" class="product-img" />
+                            <img src="img/Products/large-365520_LW_CUBOX_BASE_CAT_SCRATCH_OAK.jpg" class="product-img" />
                           </div>
                           <div class="product-body">
-                            <h3 class="product-name">Celular rosa</h3>
+                            <h3 class="product-name">Oak Scratcher</h3>
                             <p class="product-price">$50.70</p>
                             <div class="rating">
                               <i class="fas fa-star"></i>
@@ -178,10 +178,10 @@
                         data-puntaje="2"
                         >
                           <div class="product-img-container">
-                            <img src="http://www.placekitten.com/600" class="product-img" />
+                            <img src="img/Products/s-l640.jpg" class="product-img" />
                           </div>
                           <div class="product-body">
-                            <h3 class="product-name">Celular rojo</h3>
+                            <h3 class="product-name">Carrot Tree</h3>
                             <p class="product-price">$26.39</p>
                             <div class="rating">
                               <i class="fas fa-star"></i>
