--- a/index.html
+++ b/index.html
@@ -143,6 +143,11 @@
                           <i class="fas fa-star"></i>
                           <i class="far fa-star"></i>
                           <i class="far fa-star"></i>
+                        <div class="product-actions">
+                          <button type="button" class="button button-default add-to-cart-btn">
+                            GET IT
+                          </button>
+                        </div>
                         </div>
                       </div>
                     </article>
@@ -168,6 +173,11 @@
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
                         </div>
+                        <div class="product-actions">
+                          <button type="button" class="button button-default add-to-cart-btn">
+                            GET IT
+                          </button>
+                        </div>
                       </div>
                     </article>
                 </div>
@@ -191,6 +201,11 @@
                           <i class="far fa-star"></i>
                           <i class="far fa-star"></i>
                           <i class="far fa-star"></i>
+                        </div>
+                        <div class="product-actions">
+                          <button type="button" class="button button-default add-to-cart-btn">
+                            GET IT
+                          </button>
                         </div>
                       </div>
                     </article>
@@ -216,6 +231,11 @@
                           <i class="far fa-star"></i>
                           <i class="far fa-star"></i>
                         </div>
+                        <div class="product-actions">
+                          <button type="button" class="button button-default add-to-cart-btn">
+                            GET IT
+                          </button>
+                        </div>
                       </div>
                     </article>
                 </div>
@@ -240,6 +260,11 @@
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
                         </div>
+                      <div class="product-actions">
+                        <button type="button" class="button button-default add-to-cart-btn">
+                          GET IT
+                        </button>
+                      </div>
                       </div>
                     </article>
                 </div>
@@ -264,6 +289,11 @@
                           <i class="far fa-star"></i>
                           <i class="far fa-star"></i>
                         </div>
+                      <div class="product-actions">
+                        <button type="button" class="button button-default add-to-cart-btn">
+                          GET IT
+                        </button>
+                      </div>
                       </div>
                     </article>
                 </div>
@@ -288,6 +318,11 @@
                           <i class="far fa-star"></i>
                           <i class="far fa-star"></i>
                         </div>
+                      <div class="product-actions">
+                        <button type="button" class="button button-default add-to-cart-btn">
+                          GET IT
+                        </button>
+                      </div>
                       </div>
                     </article>
                 </div>
@@ -312,6 +347,11 @@
                           <i class="far fa-star"></i>
                           <i class="far fa-star"></i>
                         </div>
+                      <div class="product-actions">
+                        <button type="button" class="button button-default add-to-cart-btn">
+                          GET IT
+                        </button>
+                      </div>
                       </div>
                     </article>
                 </div>
@@ -336,6 +376,11 @@
                           <i class="fas fa-star"></i>
                           <i class="far fa-star"></i>
                         </div>
+                      <div class="product-actions">
+                        <button type="button" class="button button-default add-to-cart-btn">
+                          GET IT
+                        </button>
+                      </div>
                       </div>
                     </article>
                 </div>
@@ -359,6 +404,11 @@
                           <i class="fas fa-star"></i>
                           <i class="far fa-star"></i>
                           <i class="far fa-star"></i>
+                        </div>
+                        <div class="product-actions">
+                          <button type="button" class="button button-default add-to-cart-btn">
+                            GET IT
+                          </button>
                         </div>
                       </div>
                     </article>
@@ -384,6 +434,11 @@
                           <i class="fas fa-star"></i>
                           <i class="far fa-star"></i>
                         </div>
+                        <div class="product-actions">
+                          <button type="button" class="button button-default add-to-cart-btn">
+                            GET IT
+                          </button>
+                        </div>
                       </div>
                     </article>
                 </div>
@@ -407,6 +462,11 @@
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
+                        </div>
+                        <div class="product-actions">
+                          <button type="button" class="button button-default add-to-cart-btn">
+                            GET IT
+                          </button>
                         </div>
                       </div>
                     </article>
