--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
         </section>
     </header>
 
-    <section class="contenedor-imagen-principal">
-        <div>
-            <h1 class="texto-imagen-principal">ACCESORIES</h1>
-        </div>
-    </section>
+    <section class="contenedor-imagen-principal"></section>
 
     <section class="contenedor-seccion-principal">
         <div class="seccion-principal">
@@ -34,7 +30,7 @@
                 <form class="formulario-principal" name="form-princ">
                     <div class="contenedor-botones-aside-1">
                         <h3 class="filtros">FILTERS</h3>
-                        <button class="filters-clear-btn"><i class="fas fa-trash-alt"></i>CLEAR</button>
+                        <button class="filters-clear-btn"><i class="fas fa-trash-alt"></i> CLEAR</button>
                     </div>
                         
                     <div class="contenedor-botones-aside-2">
@@ -48,16 +44,16 @@
                     <div class="contenedor-botones-aside-3 formulario">
                         <h3>CATEGORY</h3>
                             <label for="categorias">
-                                <input type="checkbox" name="categoria" class="categorias" value="cats">CATS
+                                <input type="checkbox" name="categoria" class="categorias" value="cats"> CATS
                             </label>
                             <label for="categorias">
-                                <input type="checkbox" name="categoria" class="categorias" value="dogs">DOGS
+                                <input type="checkbox" name="categoria" class="categorias" value="dogs"> DOGS
                             </label>
                             <label for="categorias">
-                                <input type="checkbox" name="categoria" class="categorias" value="hamsters">HAMSTERS
+                                <input type="checkbox" name="categoria" class="categorias" value="hamsters"> HAMSTERS
                             </label>
                             <label for="categorias">
-                                <input type="checkbox" name="categoria" class="categorias" value="bunnies">BUNNIES
+                                <input type="checkbox" name="categoria" class="categorias" value="bunnies"> BUNNIES
                             </label>
                     </div>
                     
