--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <section class="contenedor-header">
             <div id="contenedor-icono-header">
-                <h1><i class="fa fa-paw" id="icono-header"></i> SOFÍA'S</h1>
+                <h1><i class="fa fa-paw" id="icono-header" aria-label="Pink paw"></i> SOFÍA'S</h1>
             </div>
 
             <div id="contenedor-boton-header">
@@ -38,7 +38,7 @@
         </section>
     </header>
 
-    <section class="contenedor-imagen-principal"></section>
+    <section class="contenedor-imagen-principal" alt="Images of dogs, bunnies, cat and hamster in pink background"></section>
 
     <section class="contenedor-seccion-principal">
         <div class="seccion-principal">
@@ -53,7 +53,7 @@
                         <h3 class="buscar">SEARCH</h3>
                         <div class="contenedor-busqueda">
                             <input type="text" placeholder="Search products" id="buscar-productos">
-                            <button class="boton-buscar">(Lupa)</button>
+                            <button class="boton-buscar" aria-label="Magnifier icon">(Lupa)</button>
                         </div>
                     </div>
                     
@@ -76,7 +76,7 @@
                     <div class="contenedor-botones-aside-4 formulario">
                         <h3>RATING</h3>
                             <label>
-                                <input type="checkbox" name="puntaje" class="rating-checkbox" value="5">
+                                <input type="checkbox" name="puntaje" class="rating-checkbox" value="5" aria-label="Five stars">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -84,7 +84,7 @@
                                 <i class="fas fa-star"></i> (5)
                             </label>
                             <label>
-                                <input type="checkbox" name="puntaje" class="rating-checkbox" value="4">
+                                <input type="checkbox" name="puntaje" class="rating-checkbox" value="4" aria-label="Four stars">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -92,7 +92,7 @@
                                 <i class="far fa-star"></i> (4)
                             </label>
                             <label>
-                                <input type="checkbox" name="puntaje" class="rating-checkbox" value="3">
+                                <input type="checkbox" name="puntaje" class="rating-checkbox" value="3" aria-label="Three stars">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -100,7 +100,7 @@
                                 <i class="far fa-star"></i> (3)
                             </label>
                             <label>
-                                <input type="checkbox" name="puntaje" class="rating-checkbox" value="2">
+                                <input type="checkbox" name="puntaje" class="rating-checkbox" value="2" aria-label="Two stars">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="far fa-star"></i>
@@ -108,7 +108,7 @@
                                 <i class="far fa-star"></i> (2)
                             </label>
                             <label>
-                                <input type="checkbox" name="puntaje" class="rating-checkbox" value="1">
+                                <input type="checkbox" name="puntaje" class="rating-checkbox" value="1" aria-label="One star">
                                 <i class="fas fa-star"></i>
                                 <i class="far fa-star"></i>
                                 <i class="far fa-star"></i>
@@ -127,10 +127,10 @@
                 <div class="view-buttons">
                   View as
                   <button type="button" class="view-btn show-grid-btn">
-                    <i class="fas fa-th" aria-hidden="true"></i>
+                    <i class="fas fa-th" aria-label="Grid icon"></i>
                   </button>
                   <button type="button" class="view-btn show-list-btn">
-                    <i class="fas fa-list" aria-hidden="true"></i>
+                    <i class="fas fa-list" aria-label="List icon"></i>
                   </button>
                 </div>
               </div>
@@ -149,7 +149,7 @@
                       <div class="product-body">
                         <h3 class="product-name">Comfy Bed</h3>
                         <p class="product-price">$22.49</p>
-                        <div class="rating">
+                        <div class="rating" aria-label="Three stars">
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
@@ -178,7 +178,7 @@
                       <div class="product-body">
                         <h3 class="product-name">Oak Scratcher</h3>
                         <p class="product-price">$50.70</p>
-                        <div class="rating">
+                        <div class="rating" aria-label="Five stars">
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
@@ -207,7 +207,7 @@
                       <div class="product-body">
                         <h3 class="product-name">Carrot Tree</h3>
                         <p class="product-price">$26.39</p>
-                        <div class="rating">
+                        <div class="rating" aria-label="Two stars">
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
                           <i class="far fa-star"></i>
@@ -236,7 +236,7 @@
                       <div class="product-body">
                         <h3 class="product-name">Interactive Feeder</h3>
                         <p class="product-price">$20.99</p>
-                        <div class="rating">
+                        <div class="rating" aria-label="Three stars">
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
@@ -265,7 +265,7 @@
                       <div class="product-body">
                         <h3 class="product-name">Bed with Removable Cover</h3>
                         <p class="product-price">$49.99</p>
-                        <div class="rating">
+                        <div class="rating" aria-label="Five stars">
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
@@ -294,7 +294,7 @@
                       <div class="product-body">
                         <h3 class="product-name">Toy Bridge</h3>
                         <p class="product-price">$10.30</p>
-                        <div class="rating">
+                        <div class="rating" aria-label="One star">
                           <i class="fas fa-star"></i>
                           <i class="far fa-star"></i>
                           <i class="far fa-star"></i>
@@ -323,7 +323,7 @@
                       <div class="product-body">
                         <h3 class="product-name">Grass House</h3>
                         <p class="product-price">$19.99</p>
-                        <div class="rating">
+                        <div class="rating" aria-label="Three stars">
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
@@ -352,7 +352,7 @@
                       <div class="product-body">
                         <h3 class="product-name">Food Maze</h3>
                         <p class="product-price">$32.50</p>
-                        <div class="rating">
+                        <div class="rating" aria-label="Two stars">
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
                           <i class="far fa-star"></i>
@@ -381,7 +381,7 @@
                       <div class="product-body">
                         <h3 class="product-name">Professional Brushes Set</h3>
                         <p class="product-price">$30.25</p>
-                        <div class="rating">
+                        <div class="rating" aria-label="Four stars">
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
@@ -410,7 +410,7 @@
                       <div class="product-body">
                         <h3 class="product-name">Soft Bed</h3>
                         <p class="product-price">$15.99</p>
-                        <div class="rating">
+                        <div class="rating" aria-label="Three stars">
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
@@ -439,7 +439,7 @@
                       <div class="product-body">
                         <h3 class="product-name">Rope Toys Set</h3>
                         <p class="product-price">$12.30</p>
-                        <div class="rating">
+                        <div class="rating" aria-label="Four stars">
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
@@ -468,7 +468,7 @@
                       <div class="product-body">
                         <h3 class="product-name">Automatic Feeder</h3>
                         <p class="product-price">$35.99</p>
-                        <div class="rating">
+                        <div class="rating" aria-label="Five stars">
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
                           <i class="fas fa-star"></i>
@@ -492,7 +492,7 @@
 
     <footer>
       <div class="contenedor-footer">
-        <p class="última-frase-footer"><i class="fa fa-paw" aria-hidden="true"></i> SOFÍA'S - Thank you for your visit!</p>
+        <p class="última-frase-footer"><i class="fa fa-paw" aria-hidden="true" aria-label="Pink paw"></i> SOFÍA'S - Thank you for your visit!</p>
         <div class="contenedor-redes-footer">
           <ul class="links-redes">
             <li class="ícono-redes">
