--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                         
                     <div class="contenedor-botones-aside-2">
                         <h3 class="buscar">SEARCH</h3>
-                        <div class="contenedor-busqueda">
+                        <div class="contenedor-busqueda" class="boton-buscar">
                             <input type="text" placeholder="Search products" id="buscar-productos">
-                            <button class="boton-buscar" aria-label="Magnifier icon">(Lupa)</button>
+                            <i class="fas fa-search" aria-label="Magnifier icon"></i>
                         </div>
                     </div>
                     
