--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         </section>
     </header>
 
-    <section class="contenedor-imagen-principal" alt="Images of dogs, bunnies, cat and hamster in pink background"></section>
+    <section class="contenedor-imagen-principal" alt="Images of dogs, bunnies, cat and hamster in pink background">
+      <h1 class="texto-imagen-principal">Accesories</h1>
+    </section>
 
     <section class="contenedor-seccion-principal">
         <div class="seccion-principal">
