--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
 
             
-                <button id="abrir-carrito">Cart (0 items)</button>
+                <button id="abrir-carrito"><i class="fas fa-shopping-cart"></i>  Cart (0 items)</button>
                 <div class="overlay no-mostrar" id="overlay"></div>
                 
                   <div class="carrito">
@@ -138,7 +138,7 @@
               </div>
 
                 <section class="contenedor-seccion-productos">
-                  <div id="imagen-1">
+                  <div>
                     <article class="producto"
                     data-nombre="bed"
                     data-categoria="cats"
